--- a/_config.yml
+++ b/_config.yml
@@ -6,19 +6,19 @@ pygments:         true
 permalink:        pretty
 
 # Setup
-title:            Lanyon
-tagline:          'A Jekyll theme'
-description:      'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://lanyon.getpoole.com
+title:            云中红瞳的博客
+tagline:          '想得多，做得少'
+description:      '宅男一枚。主营前端，伪全栈，擅长 nodejs、graphql、react'
+url:              https://xialvjun.github.io
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'xialvjun'
+  url:            https://github.com/xialvjun
 
 paginate:         5
 
 # Custom vars
-version:          2.0.0
+# version:          2.0.0
 
-github:
-  repo:           https://github.com/poole/lanyon
+# github:
+#   repo:           https://github.com/poole/lanyon
