pygments and markdown

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 # Dependencies
-markdown:         redcarpet
+# markdown:         redcarpet
 # redcarpet:
 #     extensions: ["fenced_code_blocks", "hard_wrap", "autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify", "no_intra_emphasis"]
-pygments:         true
+# pygments:         true
+highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
