Jekyll 3.0: 我们从 Pygments.rb 改到了 Rouge。

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # redcarpet:
 #     extensions: ["fenced_code_blocks", "hard_wrap", "autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify", "no_intra_emphasis"]
 # pygments:         true
-highlighter:      pygments
+# highlighter:      pygments
 
 # Permalinks
 permalink:        pretty
