--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,10 @@
 #     extensions: ["fenced_code_blocks", "hard_wrap", "autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify", "no_intra_emphasis"]
 # pygments:         true
 # highlighter:      pygments
+markdown:         kramdown
+highlighter:      rouge
+kramdown:
+  syntax_highlighter: rouge
 
 # Permalinks
 permalink:        pretty
