--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ permalink:        pretty
 
 # Setup
 title:            云中红瞳的博客
-tagline:          '想得多，做得少'
+tagline:          '想得多，做得少。所有未特殊表明的文章均为原创，转载请注明来源'
 description:      '宅男一枚。主营前端，伪全栈，擅长 nodejs、graphql、react'
 url:              https://xialvjun.github.io
 
