--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ permalink: /:title
 #------------------------------------------------------------------------------
 # Social sharing, comments and RSS.
 #------------------------------------------------------------------------------
-disqus-id: disqus_Trch2LylCx
+disqus-id: xialvjun-github-io
 
 enable-share: true
 twitter: xialvjun
